--- a/application/asset/sass/_screen.scss
+++ b/application/asset/sass/_screen.scss
@@ -668,25 +668,25 @@ nav.pagination + *:not(.sorting) {
         margin-bottom: rhythm(.25);
     }
 
-    header nav .navigation > li:not(:first-of-type) {
+    header nav ul.navigation > li:not(:first-of-type) {
         @include leader(.25);
     }
 
-    header nav .navigation > li:not(:last-of-type) {
+    header nav ul.navigation > li:not(:last-of-type) {
         border-color: $gray-on-white;
         @include trailing-border(1px, .25, $base-font-size, solid);
     }
 
-    header nav .navigation li li {
+    header nav ul.navigation li li {
         display: none;
     }
 
-    header nav .navigation li.active li {
+    header nav ul.navigation li.active li {
         display: block;
         margin-left: rhythm();
     }
 
-    header nav .navigation li.active {
+    header nav ul.navigation li.active {
         font-weight: bold;
 
         a:before,
@@ -745,7 +745,7 @@ nav.pagination + *:not(.sorting) {
         content: $fa-var-caret-right;
     }
 
-    header .navigation {
+    header ul.navigation {
         margin-bottom: rhythm();
     }
 
@@ -2148,7 +2148,7 @@ input[type="text"].value-language,
 
 /* @end */
 
-/* @group ----- Import Vocabulary ----- */
+/* @group ----- Vocabulary: Import ----- */
 
 .vocabs .field [type="file"] {
     margin: rhythm(.25) 0 0;
@@ -2156,7 +2156,7 @@ input[type="text"].value-language,
 
 /* @end */
 
-/* @group ----- Imported Vocabulary ----- */
+/* @group ----- Vocabulary: Show ----- */
 
 .vocabulary ul {
     padding-left: 0;
@@ -2196,51 +2196,51 @@ input[type="text"].value-language,
 
 /* @end */
 
-/* @group ----- Show Item ----- */
+    /* @group ----- Item: Show----- */
 
-.property .value a:after {
-    font-family: "FontAwesome";
-    display: inline-block;
-    margin-left: .5em;
-}
-
-.property .value.uri a:after {
-    content: $fa-var-external-link-square;
-}
-
-.property .value.items a:after {
-    content: $fa-var-cube;
-}
-
-.property .value img {
-    width: auto;
-    height: rhythm(1.5);
-    display: inline-block;
-    vertical-align: middle;
-    margin-right: rhythm(.25);
-}
-
-.property .value.item_sets a:after {
-    content: $fa-var-cubes;
-}
-
-/* @end */
-
-/* @group ----- Show Resource Template ----- */
-
-.class-row {
-    @include subhead-row;
-}
-
-.class-label {
-    font-weight: bold;
-
-    &:after {
-        content: ": ";
+    .property .value a:after {
+        font-family: "FontAwesome";
+        display: inline-block;
+        margin-left: .5em;
     }
-}
 
-/* @end */
+    .property .value.uri a:after {
+        content: $fa-var-external-link-square;
+    }
+
+    .property .value.items a:after {
+        content: $fa-var-cube;
+    }
+
+    .property .value img {
+        width: auto;
+        height: rhythm(1.5);
+        display: inline-block;
+        vertical-align: middle;
+        margin-right: rhythm(.25);
+    }
+
+    .property .value.item_sets a:after {
+        content: $fa-var-cubes;
+    }
+
+    /* @end */
+
+    /* @group ----- Resource Template: Show ----- */
+
+    .class-row {
+        @include subhead-row;
+    }
+
+    .class-label {
+        font-weight: bold;
+
+        &:after {
+            content: ": ";
+        }
+    }
+
+    /* @end */
 
 /* @group ----- Default Sidebar Views ----- */
 
@@ -2388,7 +2388,7 @@ body.sidebar-open #content {
 
 /* @end */
 
-/* @group ----- Edit Resource Template ----- */
+/* @group ----- Resource Template: Edit ----- */
 
 .resource-template #properties {
     list-style: none;
@@ -2497,7 +2497,7 @@ body.sidebar-open #content {
 
 /* @end */
 
-/* @group ----- Browse Modules ----- */
+/* @group ----- Module: Browse ----- */
 
 #modules.installed tbody tr:not(.installed),
 #modules.uninstalled tbody tr:not(.uninstalled),
@@ -2509,6 +2509,14 @@ body.sidebar-open #content {
 
 .state-filter select {
     @include trailer(.5);
+}
+
+.module-name {
+    font-weight: bold;
+}
+
+.module-version {
+    display: block;
 }
 
 /* @end */
@@ -2902,7 +2910,7 @@ body.sidebar-open #content {
 
     /* @end */
 
-    /* @group ----- Navigation ----- */
+    /* @group ----- Site Navigation ----- */
 
     #nav-page-links {
         list-style: none;
